--- a/src/pages/brevetten.astro
+++ b/src/pages/brevetten.astro
@@ -3,35 +3,14 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Index">
+<Layout title="Brevetten">
 	<main>
-		<h1>Welkom bij <span class="text-gradient">TMC Ravels</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		<h1>Brevetten</h1>
+		
+		<h2>Welke brevetten zijn er en waaruit bestaan deze?</h2>
+
+		<p>Categorie 1, categorie 2, ...</p>
+		
 	</main>
 </Layout>
 
