--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,14 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		+<a href="/">Home</a>
+		+<a href="/about">Wie zijn wij</a>
+		+<a href="/events">Kalender</a>
+		+<a href="/contact">Contact</a>
+		+<a href="/brevetten">Brevetten</a>
+		+<a href="/documents">Documenten</a>
+		+<a href="/links">Links</a>
+		+<a href="/members">Ledensectie</a>
 		<slot />
 	</body>
 </html>
