--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,35 +3,22 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Index">
+<Layout title="About">
 	<main>
-		<h1>Welkom bij <span class="text-gradient">TMC Ravels</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+		<h1>TMC Ravels</h1>
+		<h1>Over onze club</h1>
+		<h2>Lees hier alles over Taxandria Modelvliegclub Ravels!</h2>
+
+		<p>Dit is een eerste test om de website in astro te bouwen voor de modelvliegclub. Voorlopig ziet het er zeer goed uit</p>
+		
+		<p>Ons bestuur:
+			- Voorzitter: Jef Heyns
+			- Ondervoorzitter: Luk Wynants
+			- Secretaris: Marc Lenaerts
+			- Penningmeester: Peter Hermans
+			- Raadslid: Luc Tryssesoone
+			- Raadslid: Michel Vervecken
 		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
 	</main>
 </Layout>
 
