--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,14 +11,12 @@ import Card from '../components/Card.astro';
 
 		<p>Dit is een eerste test om de website in astro te bouwen voor de modelvliegclub. Voorlopig ziet het er zeer goed uit</p>
 		
-		<p>Ons bestuur:
-			- Voorzitter: Jef Heyns
-			- Ondervoorzitter: Luk Wynants
-			- Secretaris: Marc Lenaerts
-			- Penningmeester: Peter Hermans
-			- Raadslid: Luc Tryssesoone
-			- Raadslid: Michel Vervecken
-		</p>
+		<ul>
+			<li><a href="/posts/about/">Over de club</a></li>
+			<li><a href="/posts/post2/">2de post</a></li>
+			<li><a href="/posts/post3/">3de post</a></li>
+		</ul>
+
 	</main>
 </Layout>
 
