--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		<title>{title}</title>
 	</head>
 	<body>
@@ -25,6 +26,17 @@ const { title } = Astro.props;
 		+<a href="/links">Links</a>
 		+<a href="/members">Ledensectie</a>
 		<slot />
+		<script>
+			if (window.netlifyIdentity) {
+			  window.netlifyIdentity.on("init", user => {
+				if (!user) {
+				  window.netlifyIdentity.on("login", () => {
+					document.location.href = "/admin/";
+				  });
+				}
+			  });
+			}
+		  </script>
 	</body>
 </html>
 <style is:global>
