--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -8,7 +8,7 @@ import Card from '../components/Card.astro';
 		<h1>TMC Ravels</h1>
 		<h1>Ledensectie</h1>
 		<h2>Dit moet een privé sectie worden waarvoor je een login moet gebruiken</h2>
-
+		<button onclick="netlifyIdentity.open()">Login</button>
 		<p>Hier kan data worden weergegeven zoals de bardiensten, maar ook de vergaderverslagen</p>
 		
 		<p>Hier is een 2de alinea met text.</p>
