--- a/src/pages/documents.astro
+++ b/src/pages/documents.astro
@@ -6,9 +6,9 @@ import Card from '../components/Card.astro';
 <Layout title="Documents">
 	<main>
 		<h1>Documenten</h1>
-		
 		<h2>Bekijk hier belangrijke documenten</h2>
-
+		<a href="https://drive.google.com/file/d/1b8OQ6HEFuuSpqKlR7aQn_bBiaU3o-24y/view">TMC Reglement van interne orde</a>
+		
 	</main>
 </Layout>
 
