--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -7,6 +7,12 @@ import Card from '../components/Card.astro';
 	<main>
 		<h1>Interessante links</h1>
 		<a href="https://www.flytovml.be/index-nl.aspx">Website VML</a>
+
+		<h1>Partners</h1>
+		<h2>Bakkerij Dilen</h2>
+		<a href="http://www.bakkerijdilen.be/">	
+			<img src="https://www.greasyg.com/images/dilen.jpg" alt="dilen">
+		</a>
 	</main>
 </Layout>
 
