--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -11,7 +11,7 @@ import Card from '../components/Card.astro';
 		<h1>Partners</h1>
 		<h2>Bakkerij Dilen</h2>
 		<a href="http://www.bakkerijdilen.be/">	
-			<img src="https://www.greasyg.com/images/dilen.jpg" alt="dilen">
+			<img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/dilen.jpg" alt="dilen">
 		</a>
 	</main>
 </Layout>
