--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="About">
+<Layout title="TMC Ravels | Wie zijn wij?">
 	<main>
 		<h1>TMC Ravels</h1>
 		<h1>Over onze club</h1>
