--- a/src/pages/brevetten.astro
+++ b/src/pages/brevetten.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Brevetten">
+<Layout title="TMC Ravels | Brevetten">
 	<main>
 		<h1>Brevetten</h1>
 		
