--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Index">
+<Layout title="TMC Ravels | Home">
 	<main>
 		<h1>Welkom bij <span class="text-gradient">TMC Ravels</span></h1>
 		<p class="instructions">
