--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Links">
+<Layout title="TMC Ravels | Links">
 	<main>
 		<h1>Interessante links</h1>
 		<a href="https://www.flytovml.be/index-nl.aspx">Website VML</a>
