--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Contact">
+<Layout title="TMC Ravels | Contact">
 	<main>
 		<h1>TMC Ravels</h1>
 		<h1>Contactformulier</h1>
