--- a/src/pages/documents.astro
+++ b/src/pages/documents.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Documents">
+<Layout title="TMC Ravels | Documenten">
 	<main>
 		<h1>Documenten</h1>
 		<h2>Bekijk hier belangrijke documenten</h2>
