--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Events">
+<Layout title="TMC Ravels | Kalender">
 	<main>
 		<h1>Activiteitenkalender</h1>
 		
