--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Members">
+<Layout title="TMC Ravels | Ledensectie">
 	<main>
 		<h1>TMC Ravels</h1>
 		<h1>Ledensectie</h1>
