--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,10 @@
 ---
 // 1. The frontmatter prop gives access to frontmatter and other data
 import Layout from './Layout.astro';
-
 const { frontmatter } = Astro.props;
 ---
 
-<Layout pageTitle={frontmatter.title}>
+<Layout title={frontmatter.title}>
 <html>
   <head>
     <!-- Add other Head elements here, like styles and meta tags. -->
