--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+---
+import Layout from '../layouts/Layout.astro';
+---
 
-  <title>Content Manager</title>
+<Layout title="TMC Ravels | Administrator">
+	<main>
 
-  <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
-</head>
-<body>
-    <button class="loginButton">Login with Netlify Identity</button>
-</body>
-</html>
+	</main>
+</Layout>
