--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -12,6 +12,11 @@ import Card from '../components/Card.astro';
 		<p>Hier kan data worden weergegeven zoals de bardiensten, maar ook de vergaderverslagen</p>
 		
 		<p>Hier is een 2de alinea met text.</p>
+
+		<h1>Administrator sectie</h1>
+		<button id="loginButton" class="primaryButton" name="inloggen">Log in</button>
+        <div data-netlify-identity-button>Login with Netlify Identity</div>
+
 	</main>
 </Layout>
 
