--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -13,7 +13,7 @@ import Card from '../components/Card.astro';
 		
 		<p>Hier is een 2de alinea met text.</p>
 
-		<h1>Administrator sectie</h1>
+		<h1>Administrator</h1>
 		<button id="loginButton" class="primaryButton" name="inloggen">Log in</button>
         <div data-netlify-identity-button>Login with Netlify Identity</div>
 
