--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Header from "../components/Header.astro";
+import Navbar from "../components/Navbar.astro";
+import Header from "../components/Navbar.astro";
 export interface Props {
 	title: string;
 }
@@ -18,7 +19,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-	<Header/>
+	<Navbar/>
 	<slot />
 	<footer/>
 	<script>
