--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@
 ---
 
 <header>
-  <img src="../content/tmcravelsnaam.png" alt="tmcLogo" class="logo" alt="tmcLogo">
+  <img src="../content/tmclogo.png" alt="tmcLogo" class="logo" alt="tmcLogo"/>
   <nav>
     <ul class="nav_links">
       <li><a href="/">Home</a></li>
@@ -38,10 +38,12 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 30px 10%;
+
 }
 
 .logo {
   cursor: pointer;
+  margin right: auto;
 }
 
 button {
