--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import Navbar from "../components/Navbar.astro";
-import Header from "../components/Navbar.astro";
 export interface Props {
 	title: string;
 }
@@ -42,10 +41,13 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #f6f6f6;
+		background-color: #E0E0E0;
+		padding-top: 140px;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+
+
 </style>
