--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@
 ---
 
 <header>
-  <img src="/src/content/tmclogo.png" alt="tmcLogo" class="logo"/>
+  <img src="src/content/tmclogo.png" alt="tmcLogo" class="logo"/>
   <nav>
     <ul class="nav_links">
       <li><a href="/">Home</a></li>
