--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,11 @@ import Card from '../components/Card.astro';
 	<main>
 
 		<div class="slideshow" style="max-width:500px">
-			<img src="src/content/funcub_wayfarer.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
-			<img src="src/content/stermotor.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
-			<img src="src/content/djimini2.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
-			<img src="src/content/pikachu.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
-			<img src="src/content/fpvdrone.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
+			<img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/funcub_wayfarer.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
+			<img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/stermotor.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
+			<img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/djimini2.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
+			<img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/pikachu.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
+			<img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/fpvdrone.jpg" class="mySlides" style="width:100%" alt="funcub_wayfarer">
 		</div>
 		<script>
 			var myIndex = 0;
