--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@
 ---
 
 <header>
-  <img src="https://github.com/giedockx/tmc-ravels/blob/main/src/content/tmclogo.png?raw=true" alt="tmcLogo" class="logo"/>
+  <img src="https://raw.githubusercontent.com/giedockx/tmc-ravels/main/src/content/tmclogo.png" alt="tmcLogo" class="logo"/>
   <nav>
     <ul class="nav_links">
       <li><a href="/">Home</a></li>
