--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,7 @@ const { title } = Astro.props;
 	:root {
 		--accent: 100, 100, 255;
 		--accent-gradient: linear-gradient(45deg, #7be5ffd2 15%, rgb(var(--accent)) , rgb(255, 255, 255)60%);
+		--background-color: #E0E0E0;
 	}
 	html {
 		font-family: system-ui, sans-serif;
