--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import Card from '../components/Card.astro';
 			<img src="https://raw.githubusercontent.com/giedockx/tmc-ravels/main/src/content/pikachu.jpg" class="mySlides" alt="funcub_wayfarer">
 			<img src="https://raw.githubusercontent.com/giedockx/tmc-ravels/main/src/content/fpvdrone.jpg" class="mySlides" alt="funcub_wayfarer">
 		</div>
+
 		<script>
 			var myIndex = 0;
 			carousel();
@@ -32,8 +33,10 @@ import Card from '../components/Card.astro';
 			  setTimeout(carousel, 5000); // Change image every 2 seconds
 			}
 		</script>
+
+		<div class="backgroundFill"></div>
+
 		<div class="indexContent">
-			<h1>Welkom bij TMC Ravels</h1>
 			<p class="instructions">
 				Via deze site kunnen jullie op de hoogte blijven van alle <strong><a href="/events">activiteiten</a></strong> en worden <br />
 				er <strong>foto's</strong> gedeeld. Neem zeker een kijkje op onze <strong>links</strong> pagina <br />
@@ -72,17 +75,30 @@ import Card from '../components/Card.astro';
 		height: auto;
 		overflow: hidden;
 	}
-	.mySlides img {
+	.slideshow img {
 		width: 100%;
 		height: auto;
-		display: block;
-		margin-top: -100px;
-		margin-bottom: -100px;
+		display:block;
+		margin-top: -200px;
+		margin-bottom: -200px;
+		overflow: hidden;
+	}
+	.backgroundFill {
+		padding-top: 0rem;
+		max-width: 100%;
+		height: 200px;
+		position: relative;
+		display:block;
+		z-index: 2;
+		background-color: var(--background-color);
+		margin-bottom: -150px;
 	}
 	.indexContent {
-		padding: 1rem;
+		padding: 0rem;
 		max-width: 140ch;
 		margin: auto;
+		position:relative;
+		z-index:2;
 	}
 	h1 {
 		font-size: 3rem;
