--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,14 +43,11 @@ const { title } = Astro.props;
 	html {
 		font-family: system-ui, sans-serif;
 		background-color: #E0E0E0;
-		padding-top: 140px;
+		padding-top: 0;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-	.img {
-		width: 100%;
 	}
 
 </style>
