--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-const fs = require("fs");
-const markdownContent = fs.readFileSync("../pages/posts")
+
 ---
 
 <Layout title="TMC Ravels | Kalender">
@@ -10,6 +9,9 @@ const markdownContent = fs.readFileSync("../pages/posts")
 		
 		<h2>Bekijk hier al onze activiteiten</h2>
 
+		<div>
+			<h1>evenement</h1>
+		</div>
 
 		<p>Hier vind je het volledig overzicht van onze activiteiten. Het is ook mogelijk om in te schrijven met de bijgevoegde formulieren.</p>
 		
